syntax = "proto3";
import "google/protobuf/timestamp.proto";

package shop;

option go_package = "/;userservice";


service ShopService {
  // ショップの情報を取得
  rpc GetShopDetail(GetShopDetailRequest) returns (GetShopDetailResponse);
  rpc GetShopList(GetShopListRequest) returns (GetShopListResponse);
  rpc UpdateShopInfo(UpdateShopInfoRequest) returns (UpdateShopInfoResponse);
}

message GetShopDetailRequest {
  uint64 id = 1;
}

message GetShopDetailResponse {
  ShopInfo shop_info = 1;
}

message GetShopListRequest {
  repeated uint64 id = 1;
}

message GetShopListResponse {
  repeated ShopInfo shop_info_list = 1;
}

message UpdateShopInfoRequest {
  uint64 id = 1;
  message UpdateShopInfo {
    string  name = 1;
    Address address = 2;
    repeated uint64 sister_shops = 3;
  }
  UpdateShopInfo update_shop_info = 2;
  google.protobuf.Timestamp open_datetime = 3;
  google.protobuf.Timestamp close_datetime = 4;
}
message UpdateShopInfoResponse {
  ShopInfo shop_info = 1; // アップデートした内容をそのまま帰す
}

message Address {
  string country = 1;
  string zip_code_1 = 2;
  string zip_code_2 = 3;
  string address = 4;
}

message ShopInfo {
  uint64 id = 1; // ショップID(固有値)
  string  name = 2; // ショップ名
  Address address = 3; // 住所
  uint64 parent_shop_id = 4; // 親支店 0は無し/1以上で裁判
  repeated uint64 sister_shops = 5; // 姉妹店
  google.protobuf.Timestamp open_date = 6; // 開店した(or予定の)日付
}

